include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        v1.14.0
)
FetchContent_MakeAvailable(googletest)

function(add_test_case name lib)
  add_executable(${name} ${ARGN})
  target_link_libraries(${name} PRIVATE ${lib} gtest_main)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

add_test_case(test_arena  arena              test_arena.cpp)
add_test_case(test_slice  gtest_main          test_slice.cpp)
target_include_directories(test_slice PRIVATE ${CMAKE_SOURCE_DIR})
add_test_case(test_coding coding              test_coding.cpp)
add_test_case(test_hash   hash                test_hash.cpp)
add_test_case(test_crc32c crc32c              test_crc32c.cpp)
add_test_case(test_comparator comparator          test_comparator.cpp)
add_test_case(test_bloom bloom               test_bloom.cpp)
add_test_case(test_options options             test_options.cpp)
add_test_case(test_mutexlock gtest_main         test_mutexlock.cpp)
target_include_directories(test_mutexlock PRIVATE ${CMAKE_SOURCE_DIR})
add_test_case(test_cache  cache              test_cache.cpp)
add_test_case(test_logging logging            test_logging.cpp)
add_test_case(test_no_destructor gtest_main      test_no_destructor.cpp)
target_include_directories(test_no_destructor PRIVATE ${CMAKE_SOURCE_DIR})
add_test_case(test_status status            test_status.cpp)
add_test_case(test_posix_logger env           test_posix_logger.cpp)
add_test_case(test_random random           test_random.cpp)
add_test_case(test_env_posix env_posix       test_env_posix.cpp)
add_test_case(test_histogram histogram       test_histogram.cpp)
add_test_case(test_iterator iterator         test_iterator.cpp)
target_include_directories(test_iterator PRIVATE ${CMAKE_SOURCE_DIR})
target_link_libraries(test_iterator PRIVATE status)
add_test_case(test_iterator_wrapper iterator test_iterator_wrapper.cpp)
target_include_directories(test_iterator_wrapper PRIVATE ${CMAKE_SOURCE_DIR})
target_link_libraries(test_iterator_wrapper PRIVATE status)
add_test_case(test_memenv memenv test_memenv.cpp)
target_include_directories(test_memenv PRIVATE ${CMAKE_SOURCE_DIR})
target_link_libraries(test_memenv PRIVATE env_posix)
add_test_case(test_skiplist skiplist test_skiplist.cpp)
add_test_case(test_dbformat dbformat test_dbformat.cpp)
target_include_directories(test_dbformat PRIVATE ${CMAKE_SOURCE_DIR})
target_link_libraries(test_dbformat PRIVATE bloom)
add_test_case(test_merger merger test_merger.cpp)
target_include_directories(test_merger PRIVATE ${CMAKE_SOURCE_DIR})
